adicionado 2 tipos de inimigos